assets/css/styles.css
body{

    background-color: grey;
}

.aboutImage{
    float: left;
}

.footer{
    position: fixed;
    bottom: 0;
    height: 60px;
    width: 100%;   
}


.navbar-brand{
    padding: 15px 26px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-weight: bold;
    font-size: 22px;
    background-color: teal;
    margin-left: -15px;
}

.navbar{
    padding: 0;
}

h1{
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-weight: bold;
    font-size: 22px;
}

.navbar-nav p{
    padding-top: 6px;
    font-weight: lighter;
    font-size: 16px;
    padding-right: 5px;
    padding-left: 5px;
    color: lightgray;
}

.footer{
    font-size: x-small;
    border-top:5px solid teal;
}
.footer p{
    margin-top: 5px;
}

@media screen and (max-width: 980px) {

body {
      background-color: lime;     
    }

#aboutcontain{
    margin-left: 33px;
}

#yourName{
    margin-left: -50px;
}

    

